--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,31 @@
         "iostream": "cpp",
         "sstream": "cpp",
         "time": "cpp",
+        "fstream": "cpp",
+        "unordered_map": "cpp",
+        "ostream": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "exception": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "numeric": "cpp",
+        "system_error": "cpp",
+        "iosfwd": "cpp",
+        "limits": "cpp",
+        "numbers": "cpp",
+        "streambuf": "cpp",
+        "typeinfo": "cpp"
     }
 }
